kubernetes/workloads/serving/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loan-api
  namespace: application
  labels:
    app: loan-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loan-api
  template:
    metadata:
      labels:
        app: loan-api
    spec:
      containers:
        - name: loan-api
          image: us-central1-docker.pkg.dev/lendo-dr-417012/lendo-app-artifact-repo/mlflow-api/loan-api:sha-27dc9e3
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          readinessProbe:
            httpGet: {path: /health, port: 8000}
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet: {path: /health, port: 8000}
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests: {cpu: 100m, memory: 512Mi}
            limits: {cpu: "1", memory: 1Gi}
