kubernetes/workloads/serving/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loan-api
  namespace: application
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx
  rules:
    - host: loan-api.34.29.216.169.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: loan-api
                port:
                  number: 8000
